[UPD] 4 tests added
