# routes/index.js
@@ -1,20 +1,17 @@
 const express = require('express');
 const router = express.Router();
 
-const users = require('./users');
+const usersRoute = require('./users');
+const userInfoRoute = require("./userInfo");
 const characters = require('./characters');
 const weapons = require('./weapons');
 const spells = require('./spell.routes');
 
-router.get('/', (req,res)=>{
-    res.render('../views/index.hbs')
-})
-router.get('/about', (req,res)=>{
-    res.render('../views/about.hbs')
-})
 router.use('/', require('./swagger'))
 router.use('/weapons', weapons);
 router.use('/characters', characters);
 router.use('/spell', spells)
+router.use("/users", usersRoute);
+router.use("/userinfo", userInfoRoute);
 
 module.exports = router;
