# routes/spell.routes.js
@@ -6,25 +6,26 @@ const {
     seeSpells,
     newSpell,
     oneSpell,
-    editSpell,
-    testGetSpells
+    editSpell
 } = require('../controllers/spell.constrollers')
+const loadUser = require("../middleware/loadUser");
+
+// require user - middleware - let's load the user before we proceed
+// router.use([loadUser]); -- add this when we want to hook up auth0
+
 // Get all spells
 router.get('/', seeSpells)
 
 //Get specific spellings
-router.get('/one/:id', oneSpell)
+router.get('/:id', oneSpell)
 
 //Post new spellings
-router.post('/add', newSpell)
+router.post('/', newSpell)
 
 //Update spells
-router.put('/edit/:id', editSpell)
+router.put('/:id', editSpell)
 
 //Delete spells
-router.delete('/delete/:id', deleteSpell)
-
-//Test Spell Routes
-router.get('/test', testGetSpells)
+router.delete('/:id', deleteSpell)
 
 module.exports = router;
